Fixed winners page name list spacing and name format

--- a/css/style.css
+++ b/css/style.css
@@ -9367,6 +9367,12 @@ textarea.form-control {
     padding-left: 5vw;
     text-align: center;
   }
+
+.Winner{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
   .ListCont{
     list-style: none;
   }
